# PrestoZL

./: .gitignore  Build From Docker Image.MD  COPYRIGHT  Dockerfile  IOlog.patch  README.md  dockerInstall  dockerInstall.MD  prestouserinstall.md
imagebuild/: get-pip2.py
imagebuild/tempo/: .cvsignore  .gitignore  Makefile.am  README  configure.ac  prepare  tempo.cfg.in  tempo.hlp
imagebuild/tempo/clock/: Makefile.am  bipmnist.01.extrap  bipmnist.03.extrap  bipmnist.05.extrap  bipmnist.06.extrap  bipmnist.08.extrap  bipmnist.11.extrap  bipmnist.12.extrap  bipmnist.12.extrap.extralong  bipmnist.14  bipmnist.15.extrap  bipmnist.16.extrap  bipmnist.17.extrap  bipmnist.18.extrap  bipmnist.19.extrap  bipmnist.92  bipmnist.96  leap.sec  utccorr.tot
imagebuild/tempo/doc/: Makefile  index.html  param_idx.txt  reference_manual.html  tempo11.000_install.html  tempo11.html  tempo_idx.html  tempo_install.html  tempo_update.html  upload  upload_gh
imagebuild/tempo/doc/ref_man_sections/: binary.txt  clock.txt  config.txt  control.txt  description.txt  ecliptic.txt  ephem.txt  fixedformat.txt  freeformat.txt  inputfile.txt  nist-utc.txt  notes.txt  obsys.txt  options.txt  output.txt  parameter.txt  tdb-tt.txt  toa.txt  toacommand.txt  tz-in.txt  tz-param.txt  tz-polyco.txt  tz.txt
imagebuild/tempo/ephem/: Makefile.am  TDB.1950.2050
imagebuild/tempo/src/: .cvsignore  Makefile.am  a1ut1f.f  a1utcf.f  acom.h  ang.f  array.h  arrtim.f  atimfake.f  bcom.h  bigendian.f  blkdbat.f  bnrybt.f  bnrybtx.f  bnrydd.f  bnryddfwhiecc.f  bnryddgr.f  bnryddk.f  bnryddp.f  bnrydds.f  bnryddt.f  bnryeh.f  bnryell1.f  bnrymss.f  bootmc.f  bt2ell1.f  cfgin.f  chebpc.f  citem.f  clockcor.f  clocks.h  config.h.in  covar.f  cross.f  cutil.c  damoyr.f  dim.h  dot.f  dp.h  dskrd.f  (+72 more)
imagebuild/tempo/test/: .cvsignore  0437-4715.par.original  0437.par  0437.tim  Makefile.am  tempo.lis.original
imagebuild/tempo/tzpar/: 1937+21.par  Makefile.am
imagebuild/tempo/util/: README
imagebuild/tempo/util/avtime/: avtime.f
imagebuild/tempo/util/center_epoch/: center_epoch.py
imagebuild/tempo/util/compare_tempo/: README  compare_tempo
imagebuild/tempo/util/cull/: README  cull.pl
imagebuild/tempo/util/dmx/: dmx_cleanup.py  dmx_info.py  dmx_median_adjust.py
imagebuild/tempo/util/dmx_broaden/: dmx_broaden
imagebuild/tempo/util/dmx_ranges/: DMX_ranges2.py
imagebuild/tempo/util/dmxparse/: dmxparse  dmxparse.py
imagebuild/tempo/util/extract/: README  extract.pl
imagebuild/tempo/util/lk/: README  lk.f
imagebuild/tempo/util/non_tempo/: README  aolst  dt  mjd
imagebuild/tempo/util/obswgt/: README  obswgt.pl
imagebuild/tempo/util/print_resid/: Makefile.am  print_resid.c  tempo_output.c  tempo_output.h
imagebuild/tempo/util/pubpar/: README  pubpar.py
imagebuild/tempo/util/res_avg/: res_avg  res_compare
imagebuild/tempo/util/ut1/: README  check.ut1  do.iers.ut1  do.iers.ut1.new  get_ut1  get_ut1_new  make_ut1  predict_ut1.c
imagebuild/tempo/util/wgttpo/: README  wgttpo.pl  wgttpo_emin.pl  wgttpo_equad.pl
include/: accel.h  accelsearch_cmd.h  backend_common.h  cuda_helper.h  prepfold.h  prepfold_cmd.h  prepsubband_cmd.h  presto.h  psrfits.h  realfft_cmd.h  threadpool.h
src/: Makefile  accel_kernels.cu  accel_utils.c  accel_utils_cu.c  accelsearch_cmd.c  accelsearch_cu.c  accelsearch_lib.c  accelsearch_maxsize.c  backend_common.c  characteristics.c  dcdflib.c  dispersion.c  explorefft_png.c  fftcalls.c  prepcache.c  prepfold.c  prepfold_cmd.c  prepfold_plot.c  prepsubband.c  prepsubband_cmd.c  prepsubband_cu.c  prepsubband_kernels.cu  prepsubband_maxsize.c  psrfits.c  realfft.c  realfft_cmd.c  responses.c  rfifind.c  run_accelsearch_on_branches.sh  threadpool.c
tests/: call_prepfold_multi.py  call_prepsubband_cu.py  call_prepsubband_multi.py  call_realfft.py
