EXTRA_DIST = \
    bipmnist.01.extrap \
    bipmnist.03.extrap \
    bipmnist.05.extrap \
    bipmnist.06.extrap \
    bipmnist.08.extrap \
    bipmnist.11.extrap \
    bipmnist.12.extrap \
    bipmnist.12.extrap.extralong \
    bipmnist.14 \
    bipmnist.15.extrap \
    bipmnist.16.extrap \
    bipmnist.17.extrap \
    bipmnist.18.extrap \
    bipmnist.19.extrap \
    bipmnist.92 \
    bipmnist.96 \
    leap.sec \
    time_ao.dat \
    time_bonn.dat \
    time_chime.dat \
    time.dat \
    time_gb140.dat \
    time_gb853.dat \
    time_gbt.dat \
    time_jb.dat \
    time_nancay.dat \
    time_pks.dat \
    time_vla.dat \
    time_wsrt.dat \
    ut1.dat \
    utccorr.tot
